fixing copyright alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -84,7 +84,7 @@
             text-align: center;
           }
           .copyright {
-            float: center;
+            text-align: center;
         }         
     }
 
@@ -111,6 +111,6 @@
             text-align: center;
           }
           .copyright {
-            float: center;
+            text-align: center;
         }
     }   
